# t-ccd-prototype

./: .gitignore  README.md  pyproject.toml
src/: note.ipynb  particle.py
