[project]
name = "t-ccd-prototype"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Destin Ecarma", email = "109215379+DestinEcarma@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
